Added list users, list projects. Corrected get issue details and create issue
